# workflow-automation

./: .env  .env.example  CHANGELOG.md  CONFIGURAR_EMAIL.md  CONTRIBUTING.md  DECISIONS.md  EXAMPLES.md  LICENSE  PROGRESSO.md  README.md  README_GITHUB.md  docker-compose.yml
backend/: Dockerfile  Dockerfile.simple  alembic.ini  celerybeat-schedule  create_test_table.sql  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py
backend/app/: __init__.py  celery_app.py  main.py
backend/app/api/: analytics.py  api_keys.py  audit.py  auth.py  bulk.py  dashboard.py  dependencies.py  executions.py  export.py  integrations.py  notifications.py  rbac.py  schema_validation.py  schemas.py  templates.py  versions.py  webhook_configs.py  webhooks.py  workflows.py
backend/app/core/: config.py  deps.py  logging_config.py  rbac.py  security.py
backend/app/db/: database.py  seeds.py
backend/app/models/: __init__.py  api_key.py  audit_log.py  base.py  execution.py  integration.py  notification.py  organization.py  schema.py  template.py  upload.py  user.py  webhook_config.py  workflow.py  workflow_version.py
backend/app/services/: actions.py  analytics_service.py  api_key_service.py  auth_service.py  bulk_service.py  cache_service.py  execution_service.py  export_service.py  integration_action_handlers.py  integration_service.py  notification_service.py  schema_service.py  template_service.py  version_service.py  webhook_enhanced_service.py  workflow_service.py
backend/app/tasks/: workflow_tasks.py
backend/app/web/: __init__.py  audit.py  components.py  dashboard.py  executions.py  executions_new.py  workflows.py  workflows_new.py
backend/scripts/: create_tables.py
backend/tests/: README.md  conftest.py
backend/tests/integration/: test_executions_api.py  test_workflows_api.py
backend/tests/unit/: test_actions.py  test_auth.py  test_execution_service.py  test_integration_service.py  test_webhook_enhanced_service.py  test_workflow_service.py
docs/: API_GUIDE.md  ARCHITECTURE.md  DEVELOPMENT.md  EXAMPLES.md  INSTALLATION.md  README.md
frontend/templates/: base.html  index.html  login.html  simple.html  workflows_list.html
uploads/: email_20260420_143342.json  email_20260420_143539.json  email_20260420_143851.json
