[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "workflow-automation"
version = "1.0.0"
description = "Plataforma de automação de workflows e integrações internas"
requires-python = ">=3.12"
dependencies = [
    # FastAPI e servidor
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.17",
    
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    
    # Redis e Celery
    "redis>=5.2.0",
    "celery>=5.4.0",
    
    # Autenticação
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=43.0.0",
    
    # Validação e serialização
    "pydantic[email]>=2.9.0",
    "pydantic-settings>=2.6.0",
    
    # Utilidades
    "httpx>=0.27.0",
    "aiofiles>=24.1.0",
    "jinja2>=3.1.4",
    "python-dotenv>=1.0.1",
    "structlog>=24.4.0",
    "orjson>=3.10.0",
    
    # Exportação de dados
    "pandas>=2.2.0",
    "weasyprint>=62.0",
    
    # Agendamento
    "croniter>=3.0.0",
    
    # Email
    "aiosmtplib>=3.0.0",
    
    # Templates frontend leve
    "jinja2-fragments>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "faker>=30.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=app --cov-report=term-missing"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/alembic/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
